updated reference.conf